--- a/public/css/app.css
+++ b/public/css/app.css
@@ -403,7 +403,7 @@ time {
  */
 .not-found {
   display: table;
-  margin: 0 auto 1rem;
+  margin: 0;
   text-align: center;
   color: #f0f0f0;
 }
@@ -456,7 +456,7 @@ time {
 }
 
 .not-found.small {
-  margin: 0 auto .5rem;
+  margin: 0 auto;
 }
 .not-found.small > i.material-icons:nth-of-type(1) {
   font-size: 1rem;
