--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2572,31 +2572,33 @@ nav.nav-half {
  * content
  */
 .data {
+  position: relative;
   margin: 0 -1rem;
-  padding: 1rem;
+  padding: 2rem;
 
   word-wrap: anywhere;
 
   background-repeat: no-repeat;
-  background-position: top .4rem right .4rem;
+  background-position: top 16px right 16px;
   background-size: 32px;
-
-  border-width: 0 .4rem 0 0;
-  border-style: solid;
-  border-color: transparent;
-  border-radius: 0 .4rem .4rem 0;
 
   -webkit-transition: all 200ms cubic-bezier(.25, .46, .45, .94);
           transition: all 200ms cubic-bezier(.25, .46, .45, .94);
 }
 .data:hover {
   background-color: #fff;
-  border-width: 0 1rem 0 0;
-  box-shadow: -.4rem 0 1rem 1px rgba(0, 0, 0, .2);
+  background-size: 24px;
+  background-position: top 8px right 8px;
+
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 .data.blog {
   background-image: url(../img/logos/blog.svg);
   border-color: #F47E04;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #F47E04;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #F47E04;
 }
 .data.news {
   background-image: url(../img/logos/news.svg);
@@ -2605,42 +2607,72 @@ nav.nav-half {
 .data.tweet {
   background-image: url(../img/logos/twitter.svg);
   border-color: #1da1f2;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #1da1f2;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #1da1f2;
 }
 .data.sozluk {
   background-image: url(../img/logos/unknown.svg);
   border-color: #333;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #333;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #333;
 }
 .data.sozluk.uludag {
   background-image: url(../img/logos/uludag.svg);
   border-color: #754393;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #754393;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #754393;
 }
 .data.sozluk.eksi {
   background-image: url(../img/logos/eksi.svg);
   border-color: #7ec344;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #7ec344;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #7ec344;
 }
 .data.sozluk.inci {
   background-image: url(../img/logos/inci.svg);
   border-color: #f1c90c;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #f1c90c;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #f1c90c;
 }
 .data.sozluk.instela {
   background-image: url(../img/logos/instela.svg);
   border-color: #1da6b7;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #1da6b7;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #1da6b7;
 }
 .data.shopping {
   background-image: url(../img/logos/unknown.svg);
   border-color: #333;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #333;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #333;
 }
 .data.shopping.sahibinden {
   background-image: url(../img/logos/sahibinden.svg);
   border-color: #fff000;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #fff000;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #fff000;
 }
 .data.youtube {
   background-image: url(../img/logos/youtube.svg);
   border-color: #f00;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #f00;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #f00;
 }
 .data.instagram {
   background-image: url(../img/logos/instagram.svg);
   border-color: #FC2B82;
+
+  -webkit-box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #FC2B82;
+          box-shadow: 3px 0px 16px 1px rgba(0, 0, 0, .1), 0 0 3px 1px rgba(0, 0, 0, .1), .4rem .4rem 0 0 #FC2B82;
 }
 .data .title {
   font-size: 20px;
@@ -3053,58 +3085,18 @@ nav.scrolled.active,
 /*!
  * bb logo
  */
-.bb-edge {
-  position: relative;
+.bb {
   width: 110px;
   height: 110px;
 
   display: table;
-  margin: 0 auto 1rem;
-}
-.bb {
-  background-color: #4b636e;
-}
-.bb,
-.bb::before,
-.bb::after {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-.bb {
-  width: 100px;
-  height: 100px;
-  margin: auto;
+  margin: 0 auto 2rem;
 
+  background-color: #4b636e;
   background-image: url('../img/emblem.svg');
   background-repeat: no-repeat;
   background-size: 50%/70%;
-}
-.bb::before,
-.bb::after {
-  content: '';
-  z-index: -1;
-
-  margin: -5%;
-
-  -webkit-box-shadow: inset 0 0 0 2px #4b636e;
-          box-shadow: inset 0 0 0 2px #4b636e;
-
-  -webkit-animation: clipMe 8s linear infinite;
-          animation: clipMe 8s linear infinite;
-}
-.bb::before {
-  animation-delay: -4s;
-}
-
-@keyframes clipMe {
-  0%,
-  100% { clip: rect(0px, 110px, 2px, 0px); }
-  25% { clip: rect(0px, 2px, 110px, 0px); }
-  50% { clip: rect(108px, 110px, 110px, 0px); }
-  75% { clip: rect(0px, 110px, 110px, 108px); }
+  background-position: center;
 }
 
 /*!
