--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1885,13 +1885,6 @@ nav .nav-wrapper > ul > li > a > i {
 }
 
 /*!
- * dword
- */
-#dword {
-  font-size: 32px;
-}
-
-/*!
  * table
  */
 table tr {
@@ -2394,6 +2387,12 @@ nav.nav-half {
 
 .m-0 {
   margin: 0;
+}
+.m-1 {
+  margin: 1rem;
+}
+.m-2 {
+  margin: 2rem;
 }
 
 .mb-0 {
