blured trend 8vz

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -171,6 +171,11 @@ input[type=range]::-ms-thumb {
           filter: blur(0);
 }
 
+.blured {
+  -webkit-filter: blur(4px);
+          filter: blur(4px);
+}
+
 /*!
  * greyhover
  */
