--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1047,6 +1047,11 @@ code {
   }
 }
 
+.fixed-action-btn {
+  bottom: 64px;
+  right: 64px;
+}
+
 body.module-search-active {
   overflow: hidden;
 }
