--- a/public/css/app.css
+++ b/public/css/app.css
@@ -166,7 +166,7 @@
 .tr-map > small.state-sinop { top: 15%; left: 47%; }
 .tr-map > small.state-sirnak { top: 71%; left: 85.5%; }
 .tr-map > small.state-sivas { top: 42%; left: 57%; }
-.tr-map > small.state-tekirdağ { top: 20%; left: 9.5%; }
+.tr-map > small.state-tekirdag { top: 20%; left: 9.5%; }
 .tr-map > small.state-tokat { top: 33%; left: 54%; }
 .tr-map > small.state-trabzon { top: 23%; left: 70%; }
 .tr-map > small.state-tunceli { top: 47%; left: 69%; }
