--- a/public/css/app.css
+++ b/public/css/app.css
@@ -174,7 +174,7 @@
 .tr-map > small.state-van { top: 55%; left: 91%; }
 .tr-map > small.state-yalova { top: 27%; left: 19%; }
 .tr-map > small.state-yozgat { top: 41%; left: 47%; }
-.tr-map > small.state-zonguldak { top: 18%; left: 31.5%;; }
+.tr-map > small.state-zonguldak { top: 18%; left: 31.5%; }
 
 /*!
  * Top Alert
